[tool.poetry]
name = "py-doctl"
version = "0.1.0"
description = "Python wrapper for digital ocean doctl"
authors = ["prajeeshag <prajeeshag@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"delegator.py" = "^0.1.1"
maya = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
